// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should not render with menu open even allow extra space 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render login url based on pagetype 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <MenuItem
    brandStyles={
      Object {
        "employerLink": "employerLink",
      }
    }
    className="loginSignup"
    linkUrl="/login.do?nextPage=jobsForYou.do%3F&pageType=jobListing"
  >
    Log in
  </MenuItem>
  <MenuItem
    brandStyles={
      Object {
        "employerLink": "employerLink",
      }
    }
    className="loginSignup"
    linkUrl="/hk/en/jobseeker/registration"
  >
    Sign up
  </MenuItem>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render login url based on pagetype 2`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <MenuItem
    brandStyles={
      Object {
        "employerLink": "employerLink",
      }
    }
    className="loginSignup"
    linkUrl="/login.do?nextPage=jobsForYou.do%3F&pageType=jobAd"
  >
    Log in
  </MenuItem>
  <MenuItem
    brandStyles={
      Object {
        "employerLink": "employerLink",
      }
    }
    className="loginSignup"
    linkUrl="/hk/en/jobseeker/registration"
  >
    Sign up
  </MenuItem>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render when authenticated 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      OLIVIA
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="profileMale"
        />
      }
      linkUrl="/hk/en/MyJobsDB/profile"
    >
      View profile
    </MenuItem>
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="jobInvitation"
        />
      }
      linkUrl="/hk/en/Invitations/InvitationList"
    >
      Job invitations
    </MenuItem>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="menuBody"
  >
    <MenuItem
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      className="loginSignup"
      linkUrl="/logout.do"
    >
      Log out
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render when unauthenticated 1`] = `
Object {
  "authenticationStatus": "unauthenticated",
  "baseUrl": "http://seekasia.com",
  "brandStyles": Object {
    "employerLink": "employerLink",
  },
  "headerMessage": Object {
    "appStore": Object {
      "title": "App Store",
      "url": "https://itunes.apple.com/hk/app/jobsdb-job-search/id414607432?utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
    },
    "applicationHistoryList": Object {
      "title": "Application History",
      "url": "/hk/en/MyJobsDB/ApplictationHistoryList",
    },
    "careerInsights": Object {
      "title": "Career Insights",
      "url": "/hk/en/career-insights",
    },
    "downloadApp": "Download Our App",
    "employer": Object {
      "title": "For Employers",
      "url": "/hk/en/home/employerindex",
    },
    "homeTitle": "Home",
    "homeUrl": "/hk",
    "homeUrlText": "jobsDB.com",
    "invitation": Object {
      "title": "Job invitations",
      "url": "/hk/en/Invitations/InvitationList",
    },
    "jobAlertsList": Object {
      "title": "Job Alerts",
      "url": "/hk/en/MyJobsDB/JobAlertsList",
    },
    "jobsDBTitle": Object {
      "title": "My jobsDB",
      "url": "/hk/en/MyJobsDB",
    },
    "login": Object {
      "title": "Log in",
      "url": Object {
        "home": "/hk/en/login/jobseekerlogin?from=header",
        "jobAd": "/hk/en/login/jobseekerlogin?from=header&pageType=jobAd",
        "jobListing": "/hk/en/login/jobseekerlogin?from=header&pageType=jobListing",
      },
    },
    "logout": Object {
      "title": "Log out",
      "url": "/hk/en/login/jobseekerlogoff",
    },
    "mobileLoginUrl": Object {
      "home": "/login.do?nextPage=jobsForYou.do%3F",
      "jobAd": "/login.do?nextPage=jobsForYou.do%3F&pageType=jobAd",
      "jobListing": "/login.do?nextPage=jobsForYou.do%3F&pageType=jobListing",
    },
    "mobileLogoutUrl": "/logout.do",
    "playStore": Object {
      "title": "Google Play Store",
      "url": "https://play.google.com/store/apps/details?id=com.jobsdb&utm_campaign=MobileNavigationMenuAppDownload&utm_source=MobileNavigationMenu&utm_medium=banner",
    },
    "profile": Object {
      "title": "View profile",
      "url": "/hk/en/MyJobsDB/profile",
    },
    "resources": Object {
      "title": "Resources",
      "url": "/en-hk/career-recruitment-advice/",
    },
    "resumesAndDocuments": Object {
      "title": "Resumes and Documents",
      "url": "/hk/en/MyJobsDB/resumes-and-documents",
    },
    "saveJobs": Object {
      "title": "Save Jobs",
      "url": "/saveJobs.do",
    },
    "searchUrl": "/hk/en/search/getsearchresult",
    "seperatorOr": "or",
    "signUp": Object {
      "title": "Sign up",
      "url": "/hk/en/jobseeker/registration",
    },
  },
  "linkUrl": "/test",
  "locales": Array [
    Object {
      "ItemIcon": [Function],
      "country": "hk",
      "language": "en",
      "title": "Hong Kong (English)",
      "url": "https://hk.jobsdb.com/hk",
    },
    Object {
      "ItemIcon": [Function],
      "country": "id",
      "language": "en",
      "title": "Indonesia (English)",
      "url": "https://id.jobsdb.com/id",
    },
  ],
  "menuMessage": Object {
    "backToMenu": "Back to menu",
    "countryAndLanguage": "Country & Language",
    "countryList": Array [
      Object {
        "ItemIcon": [Function],
        "country": "hk",
        "language": "en",
        "languageDisplay": "English",
        "title": "Hong Kong (English)",
        "url": "",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "en",
        "languageDisplay": "English",
        "title": "Indonesia (English)",
        "url": "",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "id",
        "languageDisplay": "Bahasa",
        "title": "Indonesia (Bahasa)",
        "url": "",
      },
      Object {
        "ItemIcon": [Function],
        "country": "sg",
        "language": "en",
        "languageDisplay": "English",
        "title": "Singapore (English)",
        "url": "",
      },
      Object {
        "ItemIcon": [Function],
        "country": "th",
        "language": "en",
        "languageDisplay": "English",
        "title": "Thailand (English)",
        "url": "",
      },
      Object {
        "ItemIcon": [Function],
        "country": "th",
        "language": "th",
        "languageDisplay": "ภาษาไทย",
        "title": "ไทย (ภาษาไทย)",
        "url": "",
      },
    ],
    "jobSeekerHeader": "JOB SEEKER",
    "jobSeekerProfile": "PROFILE",
    "more": "More",
    "moreHeader": "MORE",
    "settingsHeader": "SETTINGS",
  },
  "messages": Object {
    "header.employerSiteTitle": "Awesome employers click here",
    "header.employerSiteUrl": "http://brand.seekasia.com",
    "header.invitationTitle": "Header Invitation Title",
    "header.loginTitle": "Header Login Title",
    "header.loginUrl": "/hk/en/login/jobseekerlogin",
    "header.logoutTitle": "Header Logout Title",
    "header.profileTitle": "Header Profile Title",
    "header.signupTitle": "Header Signup Title",
    "header.signupUrl": "/hk/en/jobseeker/registration",
    "menu.backToMenu": "Get back!",
    "menu.countryAndLanguage": "Country & Language",
    "menu.jobSeekerHeader": "JOB SEEKER",
    "menu.more": "More",
    "menu.moreHeader": "MORE",
    "menu.settingsHeader": "SETTINGS",
  },
  "pageType": "home",
  "userName": "Olivia",
}
`;

exports[`Menu should render with default props 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with links list 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="0"
      linkUrl="http://seekasia.com/home"
    >
      Home
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="http://seekasia.com/myPortal"
    >
      MyPortal
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="2"
      linkUrl="http://seekasia.com/resources"
    >
      Resources
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="3"
      linkUrl="http://seekasia.com/career-insights"
    >
      CareerInsights
    </MenuItem>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with menu open 1`] = `
<div
  className="root showMenu"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with menu open with extra space 1`] = `
<div
  className="root showMenu"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with menu without extra space 1`] = `
<div
  className="root showMenu"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with more links 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="0"
      linkUrl="http://seekasia.com/home"
    >
      Home
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="http://seekasia.com/myPortal"
    >
      MyPortal
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="2"
      linkUrl="http://seekasia.com/resources"
    >
      Resources
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="3"
      linkUrl="http://seekasia.com/career-insights"
    >
      CareerInsights
    </MenuItem>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with sub links 1`] = `
<div
  className="root"
>
  <Component />
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <div
      key="0"
    >
      <MenuItem
        ItemIcon={[Function]}
        brandStyles={
          Object {
            "employerLink": "employerLink",
          }
        }
        handleClick={[Function]}
      >
        Title
      </MenuItem>
      <div
        className="subMenu"
      >
        <MenuItem
          ItemIcon={
            <Icon
              animation=""
              className="backLink"
              lineHeight="loud"
              rotation="-90deg"
              size="small"
              smoothRotate={false}
              type="chevron"
            />
          }
          className="backLink"
          handleClick={[Function]}
        >
          Back to menu
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="0"
          linkUrl="http://seekasia.com/home"
        >
          Home
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="1"
          linkUrl="http://seekasia.com/myPortal"
        >
          MyPortal
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="2"
          linkUrl="http://seekasia.com/resources"
        >
          Resources
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="3"
          linkUrl="http://seekasia.com/career-insights"
        >
          CareerInsights
        </MenuItem>
      </div>
    </div>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Back to menu
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;
